--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
 		content="site web,site internet Lyon, site internet, site internet creation, agence design paris, agence design, site vitrine,web design ,webdesigner, conception de site web ,Entreprise webdesign Lyon">
 	<meta name="description"
 		content="Agence de création de site web - Conception de sites Web Professionnels Panthère est une agence de web design qui aide les entreprises à devenir attractives et visibles sur internet.">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover"/>
 	<meta name="webdesign" content="index" />
 	<meta name="robots" content="index, follow">
+	
 
 	<link rel="shortcut icon" type="image/png" href="favicon.jpg">
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
@@ -149,7 +150,7 @@
 				</div>
 				<div class="row voffset-lg voffset">
 					<div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
-						<img class="photo-commentaire" src="img/citation.png" alt="commentaire d une agence a Lyon sur son site internet"
+						<img  src="img/citation.png" alt="commentaire d une agence a Lyon sur son site internet"
 							 />
 
 					</div>
