--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 		content="site web,site internet Lyon, site internet, site internet creation, agence design paris, agence design, site vitrine,web design ,webdesigner, conception de site web ,Entreprise webdesign Lyon">
 	<meta name="description"
 		content="Agence de création de site web - Conception de sites Web Professionnels Panthère est une agence de web design qui aide les entreprises à devenir attractives et visibles sur internet.">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover"/>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
 	<meta name="webdesign" content="index" />
 	<meta name="robots" content="index, follow">
-	
+
 
 	<link rel="shortcut icon" type="image/png" href="favicon.jpg">
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
@@ -69,9 +69,9 @@
 						<ul class="site-navigation nav navbar-nav">
 							<li>
 								<a href="index.html">Accueil</a>
-							</li>							
+							</li>
 							<li>
-								<a href="page2.html">page2 &gt;</a>
+								<a href="page2.html">Contact</a>
 							</li>
 						</ul>
 					</div>
@@ -150,9 +150,9 @@
 				</div>
 				<div class="row voffset-lg voffset">
 					<div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
-						<img  src="img/citation.png" alt="commentaire d une agence a Lyon sur son site internet"
-							 />
-
+						<p>"L'agence La Panthère est une excellente agence web ! Les web designers ont réussi à capturer
+							l'essence de notre entreprise et à l'intégrer à notre site .Cela nous a aidé à doubler nos
+							ventes en ligne à Lyon." Maxime Guibard,PDG de A vos fourchettes</p>
 					</div>
 				</div>
 			</div>
@@ -297,36 +297,33 @@
 											class="fa fa-instagram icon-md"></span></a>
 								</div>
 							</div>
-						</div>						
+						</div>
 
 						<div class="row">
 							<div class="col-sm-4">
 								Partenaires
 								<ul>
-									<li><a href="voiture.com">voiture.com</a></li>
+									<li><a href="http://voiture.com/">voiture.com</a></li>
 									<li><a href="pizza.com">pizza.com</a></li>
-									<li><a href="matoiture.com">matoiture.com</a></li>									
+									<li><a href="http://matoiture.com/">matoiture.com</a></li>
 								</ul>
 							</div>
 							<div class="col-sm-4">
 								Annuaires liste 1
 								<ul>
-									<li><a href="annuaireagence.com">annuaireagenc</a></li>
-									<li><a href="annuaireseo.com">annuaireseo.com</a></li>
-									<li><a href="annuairemarketing.com">annuairemarketing.com</a></li>									
-									<li><a href="annuairewordpress.com">annuairewordpress.com</a></li>
-									<li><a href="listeagence.com">listeagence.com</a></li>
-									<li><a href="meilleuresagencesparis.com">meilleuresagencesparis.com</a></li>
-									<li><a href="listeseo.com">listeseo.com</a></li>
+									<li><a href="http://annuaireseo.com/">annuaireseo.com</a></li>
+									<li><a href="https://www.annuairemarketing.com/">annuairemarketing.com</a></li>
+									<li><a href="https://123seo.ca/">123seo.ca</a></li>
+									<li><a href="https://benjamindubuc.fr/">benjamindubuc.fr</a></li>																	
 								</ul>
 							</div>
 							<div class="col-sm-4">
 								Annuaires liste 2
-								<ul>									
-									<li><a href="ameliorerseo.com">ameliorerseo.com</a></li>									
-									<li><a href="meilleursliens.com">meilleursliens.com</a></li>									
-									<li><a href="backlink.com">backlink.com</a></li>									
-									<li><a href="remontersurgoogle.com">remontersurgoogle.com</a></li>									
+								<ul>	
+									<li><a href="https://kinsta.com/">kinsta.com</a></li>								
+									<li><a href="http://meilleursliens.com/">meilleursliens.com</a></li>
+									<li><a href="https://www.solocal.com/">solocal.com</a></li>
+									
 								</ul>
 							</div>
 						</div>
