--- a/index.html
+++ b/index.html
@@ -50,15 +50,9 @@
 			<div class="container bloc-sm">
 
 				<nav class="navbar row">
-					<div class="navbar-header">
-						<div class="keywords" style="color:#cccccc;font-size:1px;">Agence web à paris, stratégie web,
-							web design, illustrations, design de site web, site web, web, internet, site internet, site
-						</div>
+					<div class="navbar-header">						
 						<a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.svg"
-								alt="paris web design logo agence web meilleure agence" height="40" /></a>
-						<div class="keywords" style="color:#cccccc;font-size:1px;">Agence web à paris, stratégie web,
-							web design, illustrations, design de site web, site web, web, internet, site internet, site
-						</div>
+								alt="paris web design logo agence web meilleure agence" height="40" /></a>						
 						<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle"
 							data-toggle="collapse" data-target=".navbar-1">
 							<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span
@@ -106,8 +100,8 @@
 			<div class="container bloc-md">
 				<div class="row">
 					<div class="col-sm-12 text-center">
-						<p>L'agence La Panthère est une agence de web design qui aide les entreprises à devenir
-							attractives et visibles sur internet</p>
+						<h2>L'agence La Panthère est une agence de web design qui aide les entreprises à devenir
+							attractives et visibles sur internet</h2>
 					</div>
 				</div>
 				<div class="row voffset-lg med-width-whitespace">
@@ -210,7 +204,7 @@
 						<a href="#" data-lightbox="img/2.jpg" data-gallery-id="gallery-1"
 							data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img
 								src="img/2.jpg" class="img-responsive portfolio-thumb"
-								alt="paris web design logo agence web meilleure agence, Création d'un site web pour photographes" /></a>
+								alt=" Création d'un site web pour photographes" /></a>
 						<h3 class="mg-md text-center">
 							Création d'un site web pour photographes
 						</h3>
@@ -224,7 +218,7 @@
 						<a href="#" data-lightbox="img/3.bmp" data-gallery-id="gallery-1"
 							data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img
 								src="img/3.bmp" class="img-responsive portfolio-thumb"
-								alt="paris web design logo agence web meilleure agence, Création d'un site web pour voyageur" /></a>
+								alt=" Création d'un site web pour voyageur" /></a>
 						<h3 class="mg-md text-center">
 							Création d'un site internet pour un voyageur
 						</h3>
@@ -237,7 +231,7 @@
 						<a href="#" data-lightbox="img/4.bmp" data-gallery-id="gallery-1"
 							data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img
 								src="img/4.bmp" class="img-responsive portfolio-thumb"
-								alt="paris web design logo agence web meilleure agence, Création d'un site web pour agence de mariage" /></a>
+								alt=" Création d'un site web pour agence de mariage" /></a>
 						<h3 class="mg-md text-center">
 							Conception d'un site pour une agence de mariage
 						</h3>
@@ -272,57 +266,58 @@
 			<div class="container bloc-sm">
 				<div class="row">
 					<div class="col-sm-12">
-						<p class="text-center white">
+						<p class="text-center white1">
 							Agence La Panthère - Agence web basée à Lyon.<br>
 						</p>
 						<div class="row row-no-gutters social">
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" href="index.html"><span class="fa fa-twitter icon-md"></span></a>
+									<a class="social" href="#" title="twitter"><span class="fa fa-twitter icon-md"></span></a>
 								</div>
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" href="index.html"><span class="fa fa-facebook icon-md"></span></a>
+									<a class="social" href="#" title="facebook"><span class="fa fa-facebook icon-md"></span></a>
 								</div>
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" href="index.html"><span class="fa fa-dribbble icon-md"></span></a>
+									<a class="social" href="#" title="dribbble"><span class="fa fa-dribbble icon-md"></span></a>
 								</div>
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" href="index.html"><span
+									<a class="social" href="#" title="instagram"><span
 											class="fa fa-instagram icon-md"></span></a>
 								</div>
 							</div>
+							
 						</div>
 
 						<div class="row">
 							<div class="col-sm-4">
-								Partenaires
+								<h3>Partenaires</h3>
 								<ul>
-									<li><a href="http://voiture.com/">voiture.com</a></li>
-									<li><a href="pizza.com">pizza.com</a></li>
-									<li><a href="http://matoiture.com/">matoiture.com</a></li>
+									<li><a href="https://www.1ere-position.fr/"target="_blank">1ere-position.fr</a></li>
+									<li><a href="pizza.com"target="_blank">pizza.com</a></li>
+									<li><a href="http://matoiture.com/"target="_blank">matoiture.com</a></li>
 								</ul>
 							</div>
 							<div class="col-sm-4">
-								Annuaires liste 1
+								<h3>Annuaires liste 1</h3>
 								<ul>
-									<li><a href="http://annuaireseo.com/">annuaireseo.com</a></li>
-									<li><a href="https://www.annuairemarketing.com/">annuairemarketing.com</a></li>
-									<li><a href="https://123seo.ca/">123seo.ca</a></li>
-									<li><a href="https://benjamindubuc.fr/">benjamindubuc.fr</a></li>																	
+									<li><a href="https://infopreneur.blog//"target="_blank">infopreneur.blog</a></li>
+									<li><a href="https://www.annuairemarketing.com/"target="_blank">annuairemarketing.com</a></li>
+									<li><a href="https://123seo.ca/"target="_blank">123seo.ca</a></li>
+									<li><a href="https://benjamindubuc.fr/"target="_blank">benjamindubuc.fr</a></li>																	
 								</ul>
 							</div>
 							<div class="col-sm-4">
-								Annuaires liste 2
+								<h3>Annuaires liste 2</h3>
 								<ul>	
-									<li><a href="https://kinsta.com/">kinsta.com</a></li>								
-									<li><a href="http://meilleursliens.com/">meilleursliens.com</a></li>
-									<li><a href="https://www.solocal.com/">solocal.com</a></li>
+									<li><a href="https://kinsta.com/"target="_blank">kinsta.com</a></li>								
+									<li><a href="https://www.seodecollageimmediat.com/"target="_blank">seodecollageimmediat.com</a></li>
+									<li><a href="https://www.solocal.com/"target="_blank">solocal.com</a></li>
 									
 								</ul>
 							</div>
