--- a/page2.html
+++ b/page2.html
@@ -104,7 +104,7 @@
 						<label for="mail">
 							Comment nous avez-vous connu ?
 						</label>
-						<input class="form-control" type="email" required id="message" />
+						<input class="form-control" type="email" required id="mail" />
 					</div>
 
 					<div class="form-group">
