--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
 	<meta name="webdesign" content="index" />
 	<meta name="robots" content="index, follow">
 
+	git remote add origin https://github.com/audry80/Starting-website-2.git
+git branch -M main
+git push -u origin main
+
 
 	<link rel="shortcut icon" type="image/png" href="favicon.jpg">
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
@@ -190,7 +194,7 @@
 					<div class="col-sm-6">
 						<a href="#" data-lightbox="img/1.jpg" data-gallery-id="gallery-1"
 							data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img
-								src="img/1.jpg"
+								src="img/1.png"
 								alt="paris web design logo agence web meilleure agence et refonte site web journal"
 								class="img-responsive portfolio-thumb" /></a>
 						<h3 class="mg-md text-center">
